<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentChangePassword">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/new_password"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:gravity="center"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edtnewpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:hint="@string/enter_new_password"
                android:inputType="number"
                android:textColor="@color/black"
                android:textSize="15sp" />



            <EditText
                android:id="@+id/edtconfirmpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/confirm_new_password"
                android:inputType="number"
                android:textColor="@color/black"
                android:textSize="15sp" />



            <Button
                android:id="@+id/btnchangepassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:textSize="15sp"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:background="@color/purple_500"
                android:text="@string/change_password"
                android:textColor="@color/white" />

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/or"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:gravity="center"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text= "@string/change_or_register_mobile_number"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:gravity="center"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/old_number"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edtoldnumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/_0000000000"
                android:inputType="number"
                android:maxLength="11"
                android:textColor="@color/black"
                android:textSize="15sp" />



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/new_number"
                android:textColor="@color/black"
                android:textSize="20sp" />
            <EditText
                android:id="@+id/edtnewNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/enter_new_mobile_numbers"
                android:inputType="number"
                android:textColor="@color/black"
                android:textSize="15sp" />



            <Button
                android:id="@+id/btnchagemobilenumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:textSize="15sp"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:background="@color/purple_500"
                android:text="@string/enter_new_mobile_number"
                android:textColor="@color/white" />

        </LinearLayout>
    </LinearLayout>



</ScrollView>