<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FragmentAddUppdateFee">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/drive_enroll_membership_price"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:gravity="center"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/two_week_fee"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edttwoweek"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/_0_00"
                android:inputType="numberDecimal"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/four_week_fee"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edtfourweek"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/_0_00"
                android:inputType="numberDecimal"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/_8_weeks"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edteightweeks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/_0_00"
                android:inputType="numberDecimal"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/_12_weeks"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edttwelveweeks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/_0_00"
                android:inputType="numberDecimal"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/_14_weeks"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edtfourteenweeks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/_0_00"
                android:inputType="numberDecimal"
                android:textColor="@color/black"
                android:textSize="15sp" />


            <Button
                android:id="@+id/btnMemberShip"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:background="@color/purple_500"
                android:gravity="center"
                android:text="@string/save"
                android:textColor="@color/white" />

        </LinearLayout>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>