<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentAddMember">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imgPic"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/boy"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imgTakeImage"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_camera"
        app:layout_constraintBottom_toBottomOf="@+id/imgPic"
        app:layout_constraintEnd_toEndOf="@+id/imgPic"
        app:layout_constraintHorizontal_bias="0.61"
        app:layout_constraintStart_toStartOf="@+id/imgPic"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.1"
        tools:ignore="MissingConstraints" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgPic">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="169dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edtFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_margin="20dp"
                    android:hint="@string/first_name"
                    android:inputType="text|textCapSentences"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.775"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imgPic"
                    app:layout_constraintVertical_bias="0.059"
                    tools:ignore="Autofill,HardcodedText" />

                <EditText
                    android:id="@+id/edtLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:hint="@string/lastname"
                    android:inputType="text|textCapSentences"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    tools:ignore="Autofill,HardcodedText" />

                <LinearLayout
                    android:layout_width="355dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/gender"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:id="@+id/radioGroup"
                        android:layout_marginStart="10dp"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/rdMale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/male"
                            android:textSize="16sp" />

                        <RadioButton
                            android:id="@+id/rdFeMale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@string/female"
                            android:textSize="16sp" />
                    </RadioGroup>

                </LinearLayout>

                <EditText
                    android:id="@+id/edtAge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:hint="@string/age"
                    android:inputType="number"
                    android:maxLength="2"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/edtweight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:hint="@string/car_no"
                    android:inputType="numberDecimal"
                    android:maxLength="4"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
                <EditText
                    android:id="@+id/edtMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:hint="@string/mobile"
                    android:inputType="number"
                    android:maxLength="11"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/edtAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:hint="@string/address"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/edtJoining"
                        android:layout_width="360dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:enabled="false"
                        android:hint="@string/date_of_joining"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <ImageView
                        android:id="@+id/imgPicDate"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/ic_calendar" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:text="@string/membership"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <Spinner
                        android:id="@+id/spMembership"
                        style="@style/Widget.AppCompat.Spinner.Underlined"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:backgroundTint="@color/drop_down_icon"
                        android:entries="@array/membership" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="1">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/expire_on"
                        android:textSize="16sp"
                        android:layout_weight="0.7"
                        android:textColor="@color/black"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:inputType="date"
                        android:enabled="false"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:id="@+id/edtExpire" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="1">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/discount"
                        android:textSize="16sp"
                        android:layout_weight="0.7"
                        android:textColor="@color/black"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:inputType="numberDecimal"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:id="@+id/edtdiscount"
                        android:gravity = "end"
                        android:hint="0.00"
                        tools:ignore="HardcodedText,MissingPrefix" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="1">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/total"
                        android:textSize="16sp"
                        android:layout_weight="0.7"
                        android:textColor="@color/black"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:inputType="numberDecimal"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:id="@+id/edtamount"
                        android:gravity = "end"
                        android:hint ="0"/>

                </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:layout_margin="10dp"
    android:orientation="horizontal">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/save"
        android:id="@+id/btnAddMembersave"
        android:background="@color/purple_500"
        android:textColor="@color/white"
        android:layout_marginEnd="5dp"
        android:layout_gravity="center"
        android:textAllCaps="false"
        tools:ignore="ButtonStyle" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/active"
        android:id="@+id/btnActiveInactive"
        android:background="@color/purple_500"
        android:textColor="@color/white"
        android:layout_marginStart="5dp"
        android:layout_gravity="center"
        android:textAllCaps="false"
        tools:ignore="ButtonStyle" />

</LinearLayout>



            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>